--- a/content/build-cloud-ja/index.mdx
+++ b/content/build-cloud-ja/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Docker Build Cloud
 description: Docker Build Cloud に関するドキュメントを見つけて、ローカルおよびCIでコンテナイメージをより速くビルドするために役立てましょう
+asIndexPage: true
 ---
 
 import { Callout } from 'nextra/components'
