--- a/content/scout-ja/index.mdx
+++ b/content/scout-ja/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Docker Scout
 description: Docker Scout を使ってソフトウェアサプライチェーンのセキュリティを積極的に強化しましょう。
+asIndexPage: true
 ---
 
 import { Cards } from 'nextra/components'
