--- a/content/testcontainers-cloud-ja/index.mdx
+++ b/content/testcontainers-cloud-ja/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Testcontainers Cloud ドキュメント
 description: Testcontainers Cloudを使用してTestcontainersのテストを実行すると、すぐに利用できます。人気のある技術を使用してアプリケーションをテストするための同じTestcontainersモジュールにアクセスでき、ローカルマシンで重いコンテナを起動する必要がありません。
+asIndexPage: true
 ---
 
 import Image from 'next/image'
