--- a/content/testcontainers-guides-ja/index.mdx
+++ b/content/testcontainers-guides-ja/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Testcontainers ガイド
 description: 以下のガイドでは、実践的なプロジェクトを通じて Testcontainers を学ぶことができます。初心者から上級者まで、どのレベルの方にも役立つガイドが用意されているはずです。スキルをゼロから習得したい方も、すでに専門的な知識をお持ちの方も、ぜひお試しください。
+asIndexPage: true
 ---
 
 import { Cards } from 'nextra/components'
