--- a/content/testcontainers-guides-ja/index.mdx
+++ b/content/testcontainers-guides-ja/index.mdx
@@ -10,7 +10,7 @@ import { FaJava, FaNodeJs, FaPython, FaDesktop, FaAws } from "react-icons/fa";
 import { SiSpring, SiDotnet } from "react-icons/si"
 import { FaGolang } from "react-icons/fa6"
 import { DiDotnet } from "react-icons/di"
-import { AiFillApi } from "react-icons/ai"
+import { AiFillApi, AiOutlineApi } from "react-icons/ai"
 
 # Testcontainers ガイド
 
@@ -123,6 +123,18 @@ import { AiFillApi } from "react-icons/ai"
 />
 
 このガイドでは、Testcontainers の MockServer モジュールを使用して、Spring Boot アプリケーションで REST API 統合をテストする方法を説明します。
+
+<br />
+<br />
+
+<Cards.Card
+  icon={<AiOutlineApi />}
+  title="WireMock を使用した REST API 統合のテスト"
+  href="/testcontainers-guides-ja/testing-rest-api-integrations-using-wiremock"
+  arrow
+/>
+
+このガイドでは、Testcontainers の WireMock モジュールを使用して、Spring Boot アプリケーションの REST API 統合をテストする方法を説明します。
 
 <br />
 <br />
