--- a/content/testcontainers-guides-ja/introducing-testcontainers.mdx
+++ b/content/testcontainers-guides-ja/introducing-testcontainers.mdx
@@ -74,5 +74,10 @@ Testcontainers は、**Java**、**.NET**、**Go**、**Node.js**、**Rust**、**P
 
 統合テストにおける課題を確認し、モックやインメモリサービスを使ったテストが必ずしも最適ではない理由を理解しました。その後、Testcontainers が統合テストの課題をどのように解決し、実際のサービスを使用したテストを可能にするかについて説明しました。
 
-Testcontainersについてさらに詳しく知りたい方は、公式ウェブサイトをご覧ください:
-https://testcontainers.com
+Testcontainers についてさらに詳しく知りたい場合は、https://testcontainers.com をご覧ください。
+
+## 参考資料
+
+- [Java で Testcontainers を使い始める](/testcontainers-guides-ja/getting-started-with-testcontainers-for-java)
+
+- [.NET で Testcontainers を使い始める](/testcontainers-guides-ja/getting-started-with-testcontainers-for-dotnet)
