--- a/content/testcontainers-guides-ja/testing-aws-service-integrations-using-localstack.mdx
+++ b/content/testcontainers-guides-ja/testing-aws-service-integrations-using-localstack.mdx
@@ -408,3 +408,9 @@ class MessageListenerTest {
 LocalStack は、AWS サービスベースのアプリケーションをローカルで開発するための環境を提供し、Testcontainers の LocalStack モジュールは、一時的なコンテナを使用して統合テストを簡単に記述できるようにします。
 
 Testcontainers についてさらに詳しく知りたい場合は、https://testcontainers.com をご覧ください。
+
+## 参考資料
+
+- [Java で Testcontainers を使い始める](/testcontainers-guides-ja/getting-started-with-testcontainers-for-java)
+
+- [Testcontainers LocalStack モジュール](https://www.testcontainers.org/modules/localstack/)
