--- a/content/testcontainers-guides-ja/testing-rest-api-integrations-using-mockserver.mdx
+++ b/content/testcontainers-guides-ja/testing-rest-api-integrations-using-mockserver.mdx
@@ -366,3 +366,7 @@ class AlbumControllerTest {
 - Testcontainers MockServer モジュールを使用して外部 API 統合をテストする方法
 
 Testcontainers についてさらに詳しく知りたい場合は、https://testcontainers.com をご覧ください。
+
+## 参考資料
+
+- [Java Spring Boot プロジェクトで Testcontainers を使い始める](/testcontainers-guides-ja/testing-spring-boot-rest-api-using-testcontainers)
