--- a/content/testcontainers-guides-ja/testing-spring-boot-rest-api-using-testcontainers.mdx
+++ b/content/testcontainers-guides-ja/testing-spring-boot-rest-api-using-testcontainers.mdx
@@ -347,3 +347,11 @@ Postgres の Docker コンテナが起動し、すべてのテストが成功す
 Testcontainers ライブラリを使用することで、モックやインメモリデータベースではなく、本番環境で使用しているのと同じ種類のデータベース（Postgres）を用いて統合テストを記述することができました。モックを使用せず、実際のサービスと通信しているため、コードをリファクタリングしてもアプリケーションが期待通りに動作していることを確認できます。
 
 Testcontainers についてさらに詳しく知りたい場合は、https://testcontainers.com をご覧ください。
+
+## 参考資料
+
+- [Testcontainers JUnit 5 クイックスタート](https://www.testcontainers.org/quickstart/junit_5_quickstart/)
+
+- [Testcontainers Postgres モジュール](https://www.testcontainers.org/modules/databases/postgres/)
+
+- [Testcontainers JDBC サポート](https://www.testcontainers.org/modules/databases/jdbc/)
