--- a/content/testcontainers-guides-ja/getting-started-with-testcontainers-for-python.mdx
+++ b/content/testcontainers-guides-ja/getting-started-with-testcontainers-for-python.mdx
@@ -271,4 +271,14 @@ tests/test_customers.py ..                       [100%]
 
 このガイドでは、**testcontainers-python** ライブラリを使用して PostgreSQL データベースを利用した Python アプリケーションのテスト方法を紹介しました。**testcontainers-python** は、PostgreSQL のほかにも、一般的に使用される多くの SQL データベース、NoSQL データベース、メッセージキューなどに対応した専用モジュールを提供しています。また、Testcontainers を使用することで、テストのために任意のコンテナ化された依存関係を実行することが可能です！
 
-Testcontainers の詳細については、公式サイト https://testcontainers.com をぜひご覧ください。
+Testcontainers についてさらに詳しく知りたい場合は、https://testcontainers.com をご覧ください。
+
+## 参考資料
+
+- [Java で Testcontainers を使い始める](/testcontainers-guides-ja/getting-started-with-testcontainers-for-java)
+
+- [.NET で Testcontainers を使い始める](/testcontainers-guides-ja/getting-started-with-testcontainers-for-dotnet)
+
+- [Go で Testcontainers を使い始める](/testcontainers-guides-ja/getting-started-with-testcontainers-for-go)
+
+- [Node.js で Testcontainers を使い始める](/testcontainers-guides-ja/getting-started-with-testcontainers-for-nodejs)
