--- a/content/docker-security-ja/for-admins/enforce-sign-in/index.mdx
+++ b/content/docker-security-ja/for-admins/enforce-sign-in/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Docker Desktop のサインインを強制する
 description: Docker Desktop でユーザーにサインインを強制した場合に何が起こるかを理解する
+asIndexPage: true
 ---
 
 import { Table } from 'nextra/components'
