--- a/content/docker-security-ja/for-admins/hardened-desktop/enhanced-container-isolation/index.mdx
+++ b/content/docker-security-ja/for-admins/hardened-desktop/enhanced-container-isolation/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Enhanced Container Isolation (強化されたコンテナ分離)
 description: Enhanced Container Isolation (強化されたコンテナー分離) - 利点、使用理由、Dockerのルートレスとの違い、対象者
+asIndexPage: true
 ---
 
 import { Callout } from 'nextra/components'
