--- a/content/docker-security-ja/for-admins/hardened-desktop/index.mdx
+++ b/content/docker-security-ja/for-admins/hardened-desktop/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Hardened Docker Desktop
-description: Hardened Docker Desktopの概要と主な機能
+description: Hardened Docker Desktop の概要と主な機能
+asIndexPage: true
 ---
 
 import { Callout, Cards } from 'nextra/components'
