--- a/content/docker-security-ja/for-admins/hardened-desktop/settings-management/index.mdx
+++ b/content/docker-security-ja/for-admins/hardened-desktop/settings-management/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Settings Management
 description: Settings Management の仕組み、対象となるユーザー、メリットについて理解する
+asIndexPage: true
 ---
 
 import { Callout } from 'nextra/components'
