--- a/content/docker-workshop-ja/index.mdx
+++ b/content/docker-workshop-ja/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Dockerワークショップの概要
 description: このワークショップでDockerの基本を学びましょう。コンテナ、イメージ、そして最初のアプリケーションをコンテナ化する方法について学びます。
+asIndexPage: true
 ---
 
 import { Callout } from 'nextra/components'
