--- a/content/scout-ja/integrations/index.mdx
+++ b/content/scout-ja/integrations/index.mdx
@@ -1,6 +1,7 @@
 ---
 description: Docker Scoutを他のシステムと統合する方法について説明します。
 title: Docker Scoutを他のシステムと統合する
+asIndexPage: true
 ---
 
 # Docker Scoutを他のシステムと統合する
