--- a/content/scout-ja/policy/index.mdx
+++ b/content/scout-ja/policy/index.mdx
@@ -2,6 +2,7 @@
 title: Docker Scout でのポリシー評価を始めよう
 description: Docker Scout のポリシーを使用して、アーティファクトに対するサプライチェーンのルールと閾値を定義し、 時間経過に伴ってこれらの要件に対するアーティファクトのパフォーマンスを追跡します。
 keywords: scout, サプライチェーン, 脆弱性, パッケージ, CVE, ポリシー
+asIndexPage: true
 ---
 
 import { Tabs } from 'nextra/components'
