--- a/content/docker-security-ja/for-admins/enforce-sign-in/index.mdx
+++ b/content/docker-security-ja/for-admins/enforce-sign-in/index.mdx
@@ -8,14 +8,14 @@ import { Table } from 'nextra/components'
 
 # Docker Desktop のサインインを強制する
 
-デフォルトでは、Organization のメンバーはサインインせずに Docker Desktop を使用できます。ユーザーが Organization のメンバーとしてサインインしない場合、[Organization のサブスクリプションの特典](https://docs.docker.com/subscription/details/)を受けられず、[Docker のセキュリティ機能](https://docs.docker.com/security/for-admins/hardened-desktop/)を回避できてしまいます。
+デフォルトでは、Organization のメンバーはサインインせずに Docker Desktop を使用できます。ユーザーが Organization のメンバーとしてサインインしない場合、[Organization のサブスクリプションの特典](https://docs.docker.com/subscription/details/)を受けられず、[Docker のセキュリティ機能](/docker-security-ja/for-admins/hardened-desktop/)を回避できてしまいます。
 
 サインインの強制方法は、企業の環境や設定によって異なります。以下の方法があります：
 
-- レジストリキーを使用する方法 (Windows のみ)
-- 設定プロファイルを使用する方法 (Mac のみ)
-- `.plist` を使用する方法 (Mac のみ)
-- `registry.json` を使用する方法 (すべての環境に対応)
+- [レジストリキーを使用する方法 (Windows のみ)](/docker-security-ja/for-admins/enforce-sign-in/methods#レジストリキーを使用する方法-windows-のみ)
+- [設定プロファイルを使用する方法 (Mac のみ)](/docker-security-ja/for-admins/enforce-sign-in/methods#設定プロファイルを使用する方法-mac-のみ)
+- [`.plist` を使用する方法 (Mac のみ)](/docker-security-ja/for-admins/enforce-sign-in/methods#設定プロファイルを使用する方法-mac-のみ)
+- [`registry.json` を使用する方法 (すべての環境に対応)](/docker-security-ja/for-admins/enforce-sign-in/methods#設定プロファイルを使用する方法-mac-のみ)
 
 ## サインインの強制とは？
 
