registry access management

--- a/content/docker-security-ja/index.mdx
+++ b/content/docker-security-ja/index.mdx
@@ -7,6 +7,7 @@ asIndexPage: true
 import { Cards } from 'nextra/components'
 import { GoShieldLock, GoPasskeyFill } from "react-icons/go"
 import { MdSecurity } from "react-icons/md"
+import { RiArchiveStackFill } from "react-icons/ri"
 
 # Docker セキュリティ
 
@@ -41,6 +42,17 @@ Settings Management を活用して、開発者のワークフローをどのよ
 />
 
 Enhanced Container Isolation (強化されたコンテナ分離)がどのようにコンテナ攻撃を防ぐのかを理解しましょう。
+
+<br />
+
+<Cards.Card
+  icon={<RiArchiveStackFill />}
+  title="Registry Access Management"
+  href="/docker-security-ja/for-admins/hardened-desktop/registry-access-management"
+  arrow
+/>
+
+Docker Desktop 使用時に、開発者がアクセスできるレジストリを制御する。
 
 <br />
 
