--- a/content/docker-security-ja/for-admins/hardened-desktop/index.mdx
+++ b/content/docker-security-ja/for-admins/hardened-desktop/index.mdx
@@ -7,6 +7,7 @@ asIndexPage: true
 import { Callout, Cards } from 'nextra/components'
 import { GoShieldLock } from "react-icons/go"
 import { MdSecurity } from "react-icons/md"
+import { RiArchiveStackFill } from "react-icons/ri"
 
 # Hardened Docker Desktop
 
@@ -59,3 +60,14 @@ Settings Management を活用して、開発者のワークフローをどのよ
 />
 
 Enhanced Container Isolation (強化されたコンテナ分離)がどのようにコンテナ攻撃を防ぐのかを理解しましょう。
+
+<br />
+
+<Cards.Card
+  icon={<RiArchiveStackFill />}
+  title="Registry Access Management"
+  href="/docker-security-ja/for-admins/hardened-desktop/registry-access-management"
+  arrow
+/>
+
+Docker Desktop 使用時に、開発者がアクセスできるレジストリを制御する。
