docker scout index

--- a/content/scout-ja/integrations/ci/index.mdx
+++ b/content/scout-ja/integrations/ci/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: 継続的インテグレーションで Docker Scout を使用する
 description: Docker Scout を継続的インテグレーションパイプラインでセットアップする方法
+asIndexPage: true
 ---
 
 # 継続的インテグレーションで Docker Scout を使用する
