--- a/content/scout-ja/integrations/environment/index.mdx
+++ b/content/scout-ja/integrations/environment/index.mdx
@@ -1,6 +1,7 @@
 ---
 description: Docker Scout は、実行環境と統合することで、ソフトウェアサプライチェーンに関するリアルタイムのインサイトを提供します。
 title: Docker Scout と実行環境の統合
+asIndexPage: true
 ---
 
 import { Callout } from 'nextra/components'
