--- a/content/index.mdx
+++ b/content/index.mdx
@@ -35,7 +35,7 @@ Have a good read!
 
 <Cards.Card
   icon={<FaShield />}
-  title="Docker セキュリティ(WIP)"
+  title="Docker セキュリティ"
   href="/docker-security-ja"
   arrow
 />
