docker model runner

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -8,7 +8,7 @@ import { FaDocker } from "react-icons/fa"
 import { AiOutlineCloudServer } from "react-icons/ai"
 import { TbHexagon3D } from "react-icons/tb"
 import { FiHexagon } from "react-icons/fi"
-import { MdOutlineQueryStats } from "react-icons/md"
+import { MdOutlineQueryStats, MdOutlineViewInAr } from "react-icons/md"
 import { FaShield } from "react-icons/fa6"
 
 # Welcome
@@ -22,13 +22,13 @@ Have a good read!
 <br />
 
 <Cards.Card
-  icon={<FaDocker />}
-  title="Dockerワークショップ"
-  href="/docker-workshop-ja"
+  icon={<MdOutlineViewInAr />}
+  title="Docker Model Runner"
+  href="/ai/model-runner"
   arrow
 />
 
-[Docker ドキュメント](https://docs.docker.com/get-started/workshop/) で提供されているワークショップを日本語訳したものです。
+[Docker Model Runner ドキュメント](https://docs.docker.com/ai/model-runner/) を日本語訳したものです。
 
 <br />
 <br />
@@ -89,6 +89,18 @@ Have a good read!
 />
 
 [Testcoontainers Cloud ドキュメント](https://testcontainers.com/cloud/docs/) を日本語訳したものです。
+
+<br />
+<br />
+
+<Cards.Card
+  icon={<FaDocker />}
+  title="Dockerワークショップ"
+  href="/docker-workshop-ja"
+  arrow
+/>
+
+[Docker ドキュメント](https://docs.docker.com/get-started/workshop/) で提供されているワークショップを日本語訳したものです。
 
 ## Docker で動かす
 
