--- a/content/index.mdx
+++ b/content/index.mdx
@@ -4,7 +4,7 @@ title: tadashi0713 Docs
 ---
 
 import { Cards } from 'nextra/components'
-import { FaDocker } from "react-icons/fa"
+import { FaDocker, FaTools } from "react-icons/fa"
 import { AiOutlineCloudServer } from "react-icons/ai"
 import { TbHexagon3D } from "react-icons/tb"
 import { FiHexagon } from "react-icons/fi"
@@ -28,9 +28,15 @@ Have a good read!
   arrow
 />
 
-[Docker Model Runner ドキュメント](https://docs.docker.com/ai/model-runner/) を日本語訳したものです。
-
 <br />
+
+<Cards.Card
+  icon={<FaTools />}
+  title="MCP Catalog and Toolkit"
+  href="/ai/mcp-catalog-and-toolkit"
+  arrow
+/>
+
 <br />
 
 <Cards.Card
@@ -40,9 +46,6 @@ Have a good read!
   arrow
 />
 
-[Docker で提供されているセキュリティ設定ドキュメント](https://docs.docker.com/security/)を日本語訳したものです。
-
-<br />
 <br />
 
 <Cards.Card
@@ -52,9 +55,6 @@ Have a good read!
   arrow
 />
 
-[Docker Scout ドキュメント](https://docs.docker.com/scout/) を日本語訳したものです。
-
-<br />
 <br />
 
 <Cards.Card
@@ -64,9 +64,6 @@ Have a good read!
   arrow
 />
 
-[Docker Build Cloud ドキュメント](https://docs.docker.com/build-cloud/) を日本語訳したものです。
-
-<br />
 <br />
 
 <Cards.Card
@@ -76,9 +73,6 @@ Have a good read!
   arrow
 />
 
-[Testcoontainers ガイド](https://testcontainers.com/guides/) を日本語訳したものです。
-
-<br />
 <br />
 
 <Cards.Card
@@ -88,9 +82,6 @@ Have a good read!
   arrow
 />
 
-[Testcoontainers Cloud ドキュメント](https://testcontainers.com/cloud/docs/) を日本語訳したものです。
-
-<br />
 <br />
 
 <Cards.Card
@@ -99,8 +90,6 @@ Have a good read!
   href="/docker-workshop-ja"
   arrow
 />
-
-[Docker ドキュメント](https://docs.docker.com/get-started/workshop/) で提供されているワークショップを日本語訳したものです。
 
 ## Docker で動かす
 
