--- a/content/index.mdx
+++ b/content/index.mdx
@@ -10,6 +10,7 @@ import { TbHexagon3D } from "react-icons/tb"
 import { FiHexagon } from "react-icons/fi"
 import { MdOutlineQueryStats, MdOutlineViewInAr } from "react-icons/md"
 import { FaShield } from "react-icons/fa6"
+import { GoShieldLock } from 'react-icons/go'
 
 # Welcome
 
@@ -34,6 +35,15 @@ Have a good read!
   icon={<FaTools />}
   title="MCP Catalog and Toolkit"
   href="/ai/mcp-catalog-and-toolkit"
+  arrow
+/>
+
+<br />
+
+<Cards.Card
+  icon={<GoShieldLock />}
+  title="Docker Hardened Images"
+  href="/dhi/"
   arrow
 />
 
