--- a/content/dhi/how-to/index.mdx
+++ b/content/dhi/how-to/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: ハウツー
 description: Docker Hardened Images を扱うための手順ガイド。イメージの探索からデバッグまでをカバーします。
+asIndexPage: true
 ---
 
 import { Cards } from 'nextra/components'
