--- a/content/dhi/core-concepts/index.mdx
+++ b/content/dhi/core-concepts/index.mdx
@@ -185,7 +185,7 @@ DHI における glibc バリアントと musl バリアントの違いを比較
 
 <Cards.Card
   icon={<MdDoNotDisturbOn />}
-  title="イメージの不変性"
+  title="イメージのイミュータビリティ"
   href="/dhi/core-concepts/immutability/"
   arrow
 />
