get-started dmr

--- a/content/ai/model-runner.mdx
+++ b/content/ai/model-runner.mdx
@@ -78,7 +78,7 @@ Docker Model Runner は以下のプラットフォームに対応しています
 
 > [!IMPORTANT]
 >
-> Docker Desktop バージョン 4.41 以前では、この設定は **Features in development** ページ内の **Experimental features** タブにありました。
+> Docker Desktop バージョン 4.45 以前では、この設定は **Beta features** タブにありました。
 
 ### Docker Engine で DMR を有効にする
 
