--- a/content/ai/mcp-catalog-and-toolkit/toolkit.mdx
+++ b/content/ai/mcp-catalog-and-toolkit/toolkit.mdx
@@ -1,11 +1,11 @@
 ---
-title: MCP Toolkit
+title: Docker MCP Toolkit
 description: MCP Toolkit を使用して、MCP サーバおよび MCP クライアントをセットアップしましょう。
 ---
 
 import { Tabs } from 'nextra/components'
 
-# MCP Toolkit
+# Docker MCP Toolkit
 
 Docker MCP Toolkit は、コンテナ化された MCP サーバのセットアップ・管理・実行、そして AI エージェントとの接続をシームレスに実現するゲートウェイです。セキュアなデフォルト設定、ワンクリックセットアップ、LLM ベースのクライアントエコシステムへの対応により、ツール利用に伴う手間を取り除きます。
 MCP ツールの発見からローカル実行までを最短で実現するためのツールキットです。
