--- a/content/index.mdx
+++ b/content/index.mdx
@@ -8,7 +8,7 @@ import { FaDocker, FaTools } from "react-icons/fa"
 import { AiOutlineCloudServer } from "react-icons/ai"
 import { TbHexagon3D } from "react-icons/tb"
 import { FiHexagon } from "react-icons/fi"
-import { MdOutlineQueryStats, MdOutlineViewInAr } from "react-icons/md"
+import { MdOutlineQueryStats, MdOutlineViewInAr, MdNoteAdd } from "react-icons/md"
 import { FaShield } from "react-icons/fa6"
 import { GoShieldLock } from 'react-icons/go'
 
@@ -19,6 +19,15 @@ This site is collections of documents created by Tadashi Nemoto(tadashi0713).
 Have a good read!
 
 ## コンテンツ
+
+<br />
+
+<Cards.Card
+  icon={<MdNoteAdd />}
+  title="Ask Gordon"
+  href="/ai/gordon"
+  arrow
+/>
 
 <br />
 
