--- a/content/offload/index.mdx
+++ b/content/offload/index.mdx
@@ -32,7 +32,7 @@ Docker Offload は、既存の Docker ツールを使ってコンテナのビル
 
 <Cards.Card
   icon={<MdInfo />}
-  title="クイックスタート"
+  title="概要"
   href="/offload/about/"
   arrow
 />
