--- a/content/offload/index.mdx
+++ b/content/offload/index.mdx
@@ -56,12 +56,12 @@ Docker Offload とは何か、その仕組みを学びましょう。
 
 <Cards.Card
   icon={<MdMonitorHeart />}
-  title="使用方法"
+  title="利用状況"
   href="/offload/usage/"
   arrow
 />
 
-Docker Offload の利用方法とクラウドリソースの監視について学びましょう。
+Docker Offload の利用状況とクラウドリソースの監視について学びましょう。
 
 <br />
 <br />
