--- a/content/ai/cagent/index.mdx
+++ b/content/ai/cagent/index.mdx
@@ -1,3 +1,9 @@
+---
+title: cagent
+description: cagentは、チームとして連携するAIエージェントを構築、調整、共有することを可能にします。
+asIndexPage: true
+---
+
 # cagent
 
 [cagent](https://github.com/docker/cagent) は、専門化されたAIエージェントのチームを構築するためのオープンソースツールです。1つの汎用的なモデルにプロンプトを投げるのではなく、特定の問題を解決するために連携する「特定の役割と指示を持ったエージェント」を定義します。これらのエージェントチームは、任意のLLMプロバイダーを使用してターミナルから実行できます。
